rasa-service-local.yml
apiVersion: v1
kind: Service
metadata:
  name: rasa-service
spec:
  selector:
    app: rasa
  ports:
    - protocol: TCP
      port: 5005
      targetPort: 5005
      nodePort: 30005
  type: NodePort
