rasa-service-prod.yml
apiVersion: v1
kind: Service
metadata:
  name: rasa-service
  namespace: rasa-namespace
spec:
  selector:
    app: rasa
  ports:
    - protocol: TCP
      port: 5005
      targetPort: 5005
  type: LoadBalancer
