ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rasa-ingress
spec:
  rules:
    - host: rasa.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rasa-service
                port:
                  number: 5005
